--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ joblib==1.0.1
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 numpy==1.20.1
+pandas==1.2.2
 pylint==2.6.2
+python-dateutil==2.8.1
+pytz==2021.1
 rope==0.18.0
 scikit-learn==0.24.1
 scipy==1.6.0
