--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 astroid==2.4.2
+cycler==0.10.0
 isort==5.7.0
 joblib==1.0.1
+kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
+matplotlib==3.3.4
 mccabe==0.6.1
 numpy==1.20.1
 pandas==1.2.2
+Pillow==8.1.0
 pylint==2.6.2
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 rope==0.18.0
